# download-yomousyosetu

./: LICENSE  README.md  setup.cfg
mypkg/: download_novels.py
