[metadata]
name = download-yomousyosetu-qwq00
version = 0.0.2
author = qwq00
author_email = 
license_files = LICENSE
description = 小説を読もう！から任意の小説をテキストファイルでダウンロードする
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qwq00/download-yomousyosetu
project_urls =
    Bug Tracker = https://github.com/qwq00/download-yomousyosetu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  chromedriver-binary
  selenium
  webdriver_manager
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    convert-bookmeter = mypkg.download_novels:main
